@@ -6,15 +6,17 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '6.1.0'
     id 'java'
 
+    id("net.ltgt.errorprone") version "2.0.2"
+
      // To show task list as a tree, run: ./gradlew <taskname> taskTree
-     id 'com.dorongold.task-tree' version '1.5'
+     id 'com.dorongold.task-tree' version '2.1.0'
 }
 apply plugin: 'java'
 apply plugin: 'com.github.johnrengelman.shadow'
 
 group 'org.checkerframework'
 // TODO: Use this in the release process.
-version '3.9.15'
+version '3.16.0'
 
 sourceCompatibility = 1.8
 
@@ -25,6 +27,13 @@ repositories {
 // On a Java 8 JVM, use error-prone javac and source/target 8.
 // On a Java 9+ JVM, use the host javac, default source/target, and required module flags.
 ext.isJava8 = JavaVersion.current() == JavaVersion.VERSION_1_8
+
+ext {
+    // The local git repository, typically in the .git directory, but not for worktrees.
+    // This value is always overwritten, but Gradle needs the variable to be initialized.
+    localRepo = ".git"
+}
+
 
 sourceSets {
     main.java {
@@ -49,24 +58,33 @@ configurations {
 
 dependencies {
     if (isJava8) {
-        javacJar group: 'com.google.errorprone', name: 'javac', version: "9+181-r4173-1"
-        implementation 'com.google.errorprone:javac:9+181-r4173-1'
+        ext.errorproneJavacVersion = "9+181-r4173-1"
+        javacJar group: 'com.google.errorprone', name: 'javac', version: "$errorproneJavacVersion"
+        implementation "com.google.errorprone:javac:$errorproneJavacVersion"
+        errorproneJavac("com.google.errorprone:javac:$errorproneJavacVersion")
     }
-    implementation 'org.plumelib:bcel-util:1.1.10'
+    implementation 'org.plumelib:bcel-util:1.1.12'
+    if (JavaVersion.current() == JavaVersion.VERSION_1_8) {
+        implementation 'org.plumelib:options:1.0.5'
+    } else {
+        implementation 'org.plumelib:options:2.0.0'
+    }
     implementation 'org.plumelib:options:1.0.5'
-    implementation 'org.plumelib:plume-util:1.4.1'
+    implementation 'org.plumelib:plume-util:1.5.5'
     implementation 'org.plumelib:reflection-util:1.0.3'
     // Annotations in checker-qual.jar are used, but no checkers are (currently) run on the code.
-    compileOnly 'org.checkerframework:checker-qual:3.9.1'
-    implementation 'com.google.errorprone:error_prone_annotations:2.5.1'
-    implementation ('org.checkerframework.annotatedlib:guava:30.0-jre') {
+    compileOnly 'org.checkerframework:checker-qual:3.16.0'
+    implementation 'com.google.errorprone:error_prone_annotations:2.7.1'
+    implementation ('org.checkerframework.annotatedlib:guava:30.1.1-jre') {
         // So long as Guava only uses annotations from checker-qual, excluding it should not cause problems.
         exclude group: 'org.checkerframework'
     }
-    implementation 'org.ow2.asm:asm:9.0'
+    implementation 'org.ow2.asm:asm:9.2'
 
-    testImplementation group: 'junit', name: 'junit', version: '4.13.1'
-    testImplementation 'org.checkerframework:checker-qual:3.9.1'
+    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+    testImplementation 'org.checkerframework:checker-qual:3.16.0'
+
+    errorprone("com.google.errorprone:error_prone_core:2.7.1")
 }
 
 
@@ -84,7 +102,15 @@ compileJava {
             "-Xlint",
     ]
     options.encoding = 'UTF-8'
+
+    options.errorprone.disable(
+        // Suggests using an ErrorProne-specific annotation
+        "InlineMeSuggester",
+        // Suggestion assumes there is no overriding equals() method
+        "NonOverridingEquals",
+    )
 }
+
 
 shadowJar {
     destinationDirectory = projectDir
@@ -176,11 +202,11 @@ test {
 task testExample(dependsOn: compileTestJava, group: 'Verification') {
     description 'Run the scene-lib example test.'
     doLast {
-        String testDir = '../scene-lib/test/annotations/tests/executable/'
+        String testDir = "${projectDir}/../scene-lib/test/annotations/tests/executable/"
         javaexec {
             classpath = files(sourceSets.test.java.outputDir)
             classpath += sourceSets.test.compileClasspath
-            main = 'annotations.tests.executable.Example'
+            mainClass = 'annotations.tests.executable.Example'
             standardOutput = new FileOutputStream("${testDir}/example-stdout.jaif")
 
             args = ["${testDir}/example-input.jaif",
@@ -205,7 +231,7 @@ task testExample(dependsOn: compileTestJava, group: 'Verification') {
 task cleanTestExample {
     description 'Clean the scene-lib example test.'
     doLast {
-        String testDir = '../scene-lib/test/annotations/tests/executable/'
+        String testDir = "${projectDir}/../scene-lib/test/annotations/tests/executable/"
         delete "${testDir}/example-output.jaif"
         delete "${testDir}/example-stdout.jaif"
     }
@@ -243,6 +269,7 @@ task getPlumeBib() {
         }
     }
 }
+
 
 
 task makeAnnotationFileFormat(dependsOn: getPlumeBib) {
@@ -433,13 +460,14 @@ def createCheckTypeTask(checker, shortName) {
         source = sourceSets.main.java
         classpath = files("${checkerDist}/checker-qual.jar")
         classpath += sourceSets.main.compileClasspath
-        destinationDir = file("${buildDir}/typecheck/${shortName}")
+        destinationDirectory = file("${buildDir}/typecheck/${shortName}")
 
         options.annotationProcessorPath = files("${checkerDist}/checker.jar")
         options.compilerArgs += [
                 '-processor', "${checker}",
                 '-proc:only',
                 '-Xlint:-processing',
+                '-AwarnUnneededSuppressions',
         ]
         options.fork = true
 
@@ -450,6 +478,16 @@ def createCheckTypeTask(checker, shortName) {
                     "-Xbootclasspath/p:${checkerDist}/jdk8.jar"
             ]
             options.forkOptions.jvmArgs += ["-Xbootclasspath/p:${configurations.javacJar.asPath}".toString()]
+        } else {
+            options.forkOptions.jvmArgs += [
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+            ]
         }
     }
 }
@@ -462,53 +500,68 @@ task htmlValidate(type: Exec) {
     workingDir '../'
     executable 'html5validator'
     args = [
+            // The --ignore command-line argument applies to everything until the next
+            // command-line argument; that is, everything listed here is ignored.
             "--ignore",
+            "/annotation-file-utilities/annotation-file-format.html",
             "/api/",
             "/build/",
             "/javadoc/",
-            "/annotation-file-utilities/annotation-file-format.html",
+            "/plume-bib/",
             "/scene-lib/javadoc/"
     ]
 }
 
-task allTests(type: GradleBuild, group: 'Verification') {
-    description 'Run all tests.'
-    dependsOn('test', 'testExample', 'testAnnotator')
-}
+test.dependsOn testExample
+test.dependsOn testAnnotator
 
 javadoc {
     options.memberLevel = JavadocMemberLevel.PUBLIC
+    options.addStringOption('source', '8')
     options.addStringOption('Xdoclint:all', '-quiet')
+    options.addStringOption('Xmaxwarns', '10000')
+    if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
+      options.JFlags = [
+	  "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+	  "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+	  "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+	  "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+	  "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+      ]
+    }
 }
 
 task javadocPrivate(type: Javadoc) {
   description = 'Run Javadoc in strict mode.'
   source = sourceSets.main.allJava
   classpath = sourceSets.main.compileClasspath + sourceSets.main.runtimeClasspath
-  options.addStringOption('Xwerror', '-Xdoclint:all')
+  options.addStringOption('-Xdoclint:all', '-quiet')
   options.memberLevel = JavadocMemberLevel.PRIVATE
-  options.addStringOption('Xmaxwarns', '1000')
+  options.addStringOption('Xmaxwarns', '10000')
 }
 
 configurations {
   requireJavadoc
 }
 dependencies {
-  requireJavadoc "org.plumelib:require-javadoc:1.0.1"
+  requireJavadoc "org.plumelib:require-javadoc:1.0.2"
 }
 task requireJavadoc(type: JavaExec) {
   description = 'Ensures that Javadoc documentation exists.'
-  main = "org.plumelib.javadoc.RequireJavadoc"
+  mainClass = "org.plumelib.javadoc.RequireJavadoc"
   classpath = configurations.requireJavadoc
   args "annotation-file-utilities/src", "scene-lib/src"
   workingDir = "${projectDir}/.."
 }
 // check.dependsOn requireJavadoc
 
-task updateUserOptions(type: Javadoc, dependsOn: 'assemble') {
-  description "Updates printed documentation of command-line arguments."
+task updateUserOptions(dependsOn: ['updateUserOptionsJavadoc', 'updateUserOptionsHtml']) {}
 
-  // source = sourceSets.main.allJava.files.sort()
+task updateUserOptionsJavadoc(type: Javadoc, dependsOn: 'assemble') {
+  description "Updates documentation of command-line arguments in Javadoc."
+
+  // Include only sources from annotation-file-utilities, not from scene-lib.
+  source = fileTree(dir: 'src', include: '**/*.java')
   exclude 'scenelib.annotations.io.classfile/**'
   classpath = project.sourceSets.main.compileClasspath + project.sourceSets.main.runtimeClasspath
   options.memberLevel = JavadocMemberLevel.PRIVATE
@@ -517,6 +570,30 @@ task updateUserOptions(type: Javadoc, dependsOn: 'assemble') {
   options.addStringOption("docfile", "${projectDir}/src/annotator/Main.java")
   options.addStringOption("format", "javadoc")
   options.addStringOption("i", "-quiet")
+  if (JavaVersion.current().compareTo(org.gradle.api.JavaVersion.VERSION_1_9) >= 0) {
+    options.addStringOption('source', '8')
+  }
+  options.noTimestamp(false)
+  title = ""
+}
+
+task updateUserOptionsHtml(type: Javadoc, dependsOn: 'assemble') {
+  description "Updates documentation of command-line arguments in the manual."
+
+  // Include only sources from annotation-file-utilities, not from scene-lib.
+  source = fileTree(dir: 'src', include: '**/*.java')
+  exclude 'scenelib.annotations.io.classfile/**'
+  classpath = project.sourceSets.main.compileClasspath + project.sourceSets.main.runtimeClasspath
+  options.memberLevel = JavadocMemberLevel.PRIVATE
+  options.docletpath = project.sourceSets.main.runtimeClasspath as List
+  options.doclet = "org.plumelib.options.OptionsDoclet"
+  options.addStringOption("docfile", "${projectDir}/annotation-file-utilities.html")
+  options.addStringOption("format", "html")
+  options.addStringOption("i", "-quiet")
+  if (JavaVersion.current().compareTo(org.gradle.api.JavaVersion.VERSION_1_9) >= 0) {
+    options.addStringOption('source', '8')
+  }
+  options.noTimestamp(false)
   title = ""
 }
 
@@ -610,4 +687,110 @@ task releaseBuild(type: GradleBuild) {
     startParameter.projectProperties += [release: true.toString()]
 
     tasks = ['clean', 'zipfile', 'testAnnotator', 'copyToDeployDir']
+}
+
+
+task pythonIsInstalled(type: Exec) {
+  description "Check that the python3 executable is installed."
+  executable = "python3"
+  args "--version"
+}
+
+
+task setLocalRepo(type:Exec) {
+    commandLine 'git', 'worktree', 'list'
+    standardOutput = new ByteArrayOutputStream()
+    doLast {
+       String worktreeList = standardOutput.toString()
+       localRepo = worktreeList.substring(0, worktreeList.indexOf(" ")) + "/.git"
+    }
+}
+
+task installGitHooks(type: Copy, dependsOn: 'setLocalRepo') {
+    description 'Copies git hooks to .git directory'
+    from files(".git.pre-commit")
+    rename('.git\\.(.*)', '$1')
+    into localRepo + "/hooks"
+}
+compileJava.dependsOn installGitHooks
+
+
+/// Code formatting
+
+ext.formatScriptsHome = "${projectDir}/.run-google-java-format"
+
+task getCodeFormatScripts() {
+    description 'Obtain or update the run-google-java-format scripts'
+    if (file(formatScriptsHome).exists()) {
+        exec {
+            workingDir formatScriptsHome
+            executable 'git'
+            args = ['pull', '-q']
+            ignoreExitValue = true
+        }
+    } else {
+        exec {
+            workingDir "${formatScriptsHome}/../"
+            executable 'git'
+            args = ['clone', '-q', '--depth', '1', 'https://github.com/plume-lib/run-google-java-format.git', '.run-google-java-format']
+        }
+    }
+}
+
+/**
+ * Returns a list of all the Java files that should be formatted for the given project. These are:
+ *
+ * All java files in the main sourceSet.
+ * All java files in the tests directory that compile.
+ *
+ * @param projectName name of the project to format
+ * @return a list of all Java files that should be formatted for projectName
+ */
+List<String> getJavaFilesToFormat(projectName) {
+    List<File> javaFiles = new ArrayList<>();
+    sourceSets.forEach { set ->
+        javaFiles.addAll(set.java.files)
+    }
+
+    // Collect all java files in tests directory
+    fileTree("tests").visit { details ->
+        // If you change this, also change checker/bin-devel/git.pre-commit
+        if (!details.path.contains("nullness-javac-errors")
+                && !details.path.contains("returnsreceiverdelomboked")
+                && !details.path.contains("build")
+                && details.name.endsWith('java')) {
+            javaFiles.add(details.file)
+        }
+    }
+
+    List<String> args = new ArrayList<>();
+    for (File f : javaFiles) {
+        args += relativePath(f)
+    }
+    return args
+}
+
+task checkFormat(type: Exec, dependsOn: [getCodeFormatScripts, pythonIsInstalled], group: 'Format') {
+    description 'Check whether the source code is properly formatted'
+    executable 'python3'
+
+    doFirst {
+        args += "${formatScriptsHome}/check-google-java-format.py"
+        args += getJavaFilesToFormat(project.name)
+    }
+    ignoreExitValue = true
+    doLast {
+        if (!executionResult.isPresent() || executionResult.get().getExitValue() != 0) {
+            throw new RuntimeException('Found improper formatting, try running:  ./gradlew reformat"')
+        }
+    }
+}
+
+task reformat(type: Exec, dependsOn: [getCodeFormatScripts, pythonIsInstalled], group: 'Format') {
+    description 'Format the Java source code'
+    executable 'python3'
+    doFirst {
+        args += "${formatScriptsHome}/run-google-java-format.py"
+        args += getJavaFilesToFormat(project.name)
+    }
 }
